k8s/50-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: liquidsoap
  namespace: castflow
  labels:
    app: liquidsoap
spec:
  selector:
    app: liquidsoap
  ports:
  - port: 1234
    targetPort: 1234
    name: telnet
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: icecast
  namespace: castflow
  labels:
    app: icecast
spec:
  selector:
    app: icecast
  ports:
  - port: 8000
    targetPort: 8000
    name: stream
  type: ClusterIP
